--- a/site/index.html
+++ b/site/index.html
@@ -25,6 +25,7 @@
             <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="contact.html">Contact us</a></li>
+            <li><a href="#">Awards</a></li>
         </ul>
         <div class="burger" onclick="openNav()">
             <div class="line"></div>
@@ -43,6 +44,7 @@
             <a href="products.html">Produts</a>
             <a href="about.html">About us</a>
             <a href="contact.html">Contact us</a>
+            <a href="#">Awards</a>
         </div>
     </div>
     <!--Curtain menu end-->
@@ -51,23 +53,19 @@
     </div>
     <!--main content start-->
     <div class="content">
-        <div class="intro fade-in">
+        <div class="intro">
             <h2 id="middlesub">Welcome</h2>
             <p>AMAYUU Cinnamon is processed into quills and packed within two days of harvesting (probably the freshest Cinnamon of the World) to preserve its amazing health benefits, aroma, taste and colour. Compare this with the traditional method which takes 10-14 days.</p>
-            <p>We harvest selected materials from chemical free best cinnamon fields in the area surrounding the processing plant (in Matara-southern Sri Lanka), peel and process them hygienically into variety of forms in ISO22000 certified  processing plant. ISO 22000  certified production process delivers products with low moisture and very low microbial counts. Our products can be consumed in raw form without cooking.
-            <span id="dots">...</span></p>
-            <span id="more">
-                <p>We take great care to select only the best part of the inner bark to make premium quality quills. 
-                    Therefore, we use 50% more raw material stock to produce our Cinnamon quills. 
-                    These quills are then cut into different sizes.
-                    Parts of these quills are then ground into Tea bag cut and fine powder; these two materials do not contain chips or any other byproduct or wastes. 
-                    All our Cinnamon products are made from Ceylon cinnamon in pure natural form without any chemical treatments or additives. 
-                </p> 
-                <p>We assure you that our Cinnamons are the freshest and finest Ceylon Cinnamon you can buy anywhere in the world. 
-                    We are a family-managed enterprise operating in the southern Sri Lanka – the heart of the cinnamon growing area and producing only a very few tons of this artisanal product every year.
-                </p>
-            </span>
-            <button onclick="readMore()" id="myBtn">Read More</button>
+            <p>We harvest selected materials from chemical free best cinnamon fields in the area surrounding the processing plant (in Matara-southern Sri Lanka), peel and process them hygienically into variety of forms in ISO22000 certified  processing plant. ISO 22000  certified production process delivers products with low moisture and very low microbial counts. Our products can be consumed in raw form without cooking.</p>
+            <p>We take great care to select only the best part of the inner bark to make premium quality quills. 
+                Therefore, we use 50% more raw material stock to produce our Cinnamon quills. 
+                These quills are then cut into different sizes.
+                Parts of these quills are then ground into Tea bag cut and fine powder; these two materials do not contain chips or any other byproduct or wastes. 
+                All our Cinnamon products are made from Ceylon cinnamon in pure natural form without any chemical treatments or additives. 
+            </p> 
+            <p>We assure you that our Cinnamons are the freshest and finest Ceylon Cinnamon you can buy anywhere in the world. 
+                We are a family-managed enterprise operating in the southern Sri Lanka – the heart of the cinnamon growing area and producing only a very few tons of this artisanal product every year.
+            </p>
                 
         </div>
         <div class="intro fade-in">
@@ -92,6 +90,7 @@
                     <p>20 models</p>
                 </div>
             </div>
+            <a href="products.html"><button id="myBtn">More</button></a>
         </div>
         
     </div>
