--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <title>Saviru Technologies & Services</title>
     <meta charset="UTF-8"> <!--enabling charset-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--setting the viewport-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"> <!--setting the viewport-->
     <meta name="keywords" content="saviru, dehydraters">
     <meta name="description" content="Saviru Industrial dehydraters">
     <meta name="author" content="Saviru Technologies & Services">
