--- a/site/about.html
+++ b/site/about.html
@@ -25,6 +25,7 @@
             <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="contact.html">Contact us</a></li>
+            <li><a href="contact.html">awards</a></li>
         </ul>
         <div class="burger" onclick="openNav()">
             <div class="line"></div>
@@ -43,6 +44,7 @@
             <a href="products.html">Produts</a>
             <a href="about.html">About us</a>
             <a href="contact.html">Contact us</a>
+            <a href="contact.html">Awards</a>
         </div>
     </div>
     <!--Curtain menu end-->
