--- a/site/about.html
+++ b/site/about.html
@@ -65,7 +65,9 @@
             <img src="img/SAVIRU NEW.png" alt="">
             <p>Follow us on</p>
             <div class="social">
-                <a href="#" class="fa fa-facebook" target="_blank"></a>
+                <a href="#"target="_blank" id="sbtn"><span class="material-icons">
+                    facebook
+                    </span></a>
             </div>
         </div>
         <div class="footer-right">
