--- a/site/index.html
+++ b/site/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <!--Navbar start-->
@@ -66,6 +67,10 @@
             <p>We assure you that our Cinnamons are the freshest and finest Ceylon Cinnamon you can buy anywhere in the world. 
                 We are a family-managed enterprise operating in the southern Sri Lanka – the heart of the cinnamon growing area and producing only a very few tons of this artisanal product every year.
             </p>
+            <div class="counter">
+                
+                <h2 id="small-sub"></h2>
+            </div>
                 
         </div>
         <div class="intro fade-in">
@@ -106,7 +111,9 @@
             <img src="img/SAVIRU NEW.png" alt="">
             <p>Follow us on</p>
             <div class="social">
-                <a href="#" class="fa fa-facebook" target="_blank"></a>
+                <a href="#"target="_blank" id="sbtn"><span class="material-icons">
+                    facebook
+                    </span></a>
             </div>
         </div>
         <div class="footer-right">
