--- a/site/products.html
+++ b/site/products.html
@@ -25,6 +25,7 @@
             <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="contact.html">Contact us</a></li>
+            <li><a href="contact.html">awards</a></li>
         </ul>
         <div class="burger" onclick="openNav()">
             <div class="line"></div>
@@ -43,6 +44,7 @@
             <a href="products.html">Produts</a>
             <a href="about.html">About us</a>
             <a href="contact.html">Contact us</a>
+            <a href="contact.html">awards</a>
         </div>
     </div>
     <!--Curtain menu end-->
@@ -63,7 +65,9 @@
             <img src="img/SAVIRU NEW.png" alt="">
             <p>Follow us on</p>
             <div class="social">
-                <a href="#" class="fa fa-facebook" target="_blank"></a>
+                <a href="#"target="_blank" id="sbtn"><span class="material-icons">
+                    facebook
+                    </span></a>
             </div>
         </div>
         <div class="footer-right">
