--- a/site/contact.html
+++ b/site/contact.html
@@ -47,6 +47,7 @@
             <a href="products.html">Produts</a>
             <a href="about.html">About us</a>
             <a href="contact.html">Contact us</a>
+            <a href="contact.html">Awards</a>
         </div>
     </div>
     <!--Curtain menu end-->
