--- a/site/about.html
+++ b/site/about.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Saviru Industrial dehydraters">
     <meta name="author" content="Saviru Technologies & Services">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style4.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
@@ -42,7 +43,7 @@
         onclick="closeNav()">&times</a>
         <div class="overlay-content">
             <a href="index.html">Home</a>
-            <a href="products.html">Produts</a>
+            <a href="products.html">Products</a>
             <a href="about.html">About us</a>
             <a href="contact.html">Contact us</a>
             <a href="contact.html">Awards</a>
@@ -53,6 +54,56 @@
         <p>Manufacturer of the largest range of dryers and dehydrators serving the country !</p>
     </div>
 
+    <div class="content">
+        <div class="intro" id="story">
+            <h2 id="middlesub">our story</h2>
+            <img src="img/SAVIRU NEW.png" alt="">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porta mollis ultrices. Curabitur vel nisi tellus. Sed arcu libero, placerat ut nisl id, ultrices semper arcu. Aliquam molestie vestibulum maximus. Phasellus pulvinar nec justo eget convallis. Praesent vitae ligula nec sem hendrerit rhoncus eu eget elit. Nam et leo aliquam, ultrices leo et, posuere diam. Vivamus placerat auctor sapien ac faucibus. Duis euismod dictum enim sit amet ultricies. Phasellus tincidunt scelerisque lorem, ac fringilla augue fringilla in. Quisque faucibus metus tellus, ac tincidunt tellus maximus et. Maecenas varius vitae purus ac dignissim. Vivamus vitae felis auctor, pharetra ex ut, efficitur turpis. Vivamus pulvinar suscipit eros, sit amet fermentum ex interdum nec.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porta mollis ultrices. Curabitur vel nisi tellus. Sed arcu libero, placerat ut nisl id, ultrices semper arcu. Aliquam molestie vestibulum maximus. Phasellus pulvinar nec justo eget convallis. Praesent vitae ligula nec sem hendrerit rhoncus eu eget elit. Nam et leo aliquam, ultrices leo et, posuere diam. Vivamus placerat auctor sapien ac faucibus. Duis euismod dictum enim sit amet ultricies. Phasellus tincidunt scelerisque lorem, ac fringilla augue fringilla in. Quisque faucibus metus tellus, ac tincidunt tellus maximus et. Maecenas varius vitae purus ac dignissim. Vivamus vitae felis auctor, pharetra ex ut, efficitur turpis. Vivamus pulvinar suscipit eros, sit amet fermentum ex interdum nec.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porta mollis ultrices. Curabitur vel nisi tellus. Sed arcu libero, placerat ut nisl id, ultrices semper arcu. Aliquam molestie vestibulum maximus. Phasellus pulvinar nec justo eget convallis. Praesent vitae ligula nec sem hendrerit rhoncus eu eget elit. Nam et leo aliquam, ultrices leo et, posuere diam. Vivamus placerat auctor sapien ac faucibus. Duis euismod dictum enim sit amet ultricies. Phasellus tincidunt scelerisque lorem, ac fringilla augue fringilla in. Quisque faucibus metus tellus, ac tincidunt tellus maximus et. Maecenas varius vitae purus ac dignissim. Vivamus vitae felis auctor, pharetra ex ut, efficitur turpis. Vivamus pulvinar suscipit eros, sit amet fermentum ex interdum nec.
+            </p>
+        </div>
+        <div class="intro fade-in">
+            <h2 id="middlesub">our team</h2>
+            <div class="ranges">
+                <div id="team">
+                    <img src="img/kapila.jpg" alt="">
+                    <h2 id="small-sub">eng. kapila weeratunga</h2>
+                    <p>
+                        BSc. Eng (UoP), M.Phill (UoP) <br>
+                        Managing partner / Chief engineer <br>
+                        M : +94773602488 
+                    </p>
+                    <a href="#" class="fa fa-linkedin" target="_blank" id="sbtn"></a>
+                </div>
+                <div id="team">
+                    <img src="img/sriya.jpg" alt="">
+                    <h2 id="small-sub">eng. (Mrs.) sriya weeratunga</h2>
+                    <p>
+                        BSc. Eng (UoP), MSc (AIT) <br>
+                        Community outreach<br>
+                        M : +94773633652 
+                    </p>
+                    <a href="#" class="fa fa-linkedin" target="_blank" id="sbtn"></a>
+                </div>
+                <div id="team">
+                    <img src="img/chandima.jpg" alt="">
+                    <h2 id="small-sub">chandima weeratunga</h2>
+                    <p>
+                        BSc. Eng (UoM) (UG)<br>
+                        Marketing<br>
+                        M : +94773626499
+                    </p>
+                    <a href="https://www.linkedin.com/in/chandima-weeratunga-a71608153/" class="fa fa-linkedin" target="_blank" id="sbtn"></a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
