--- a/site/contact.html
+++ b/site/contact.html
@@ -44,7 +44,7 @@
         onclick="closeNav()">&times</a>
         <div class="overlay-content">
             <a href="index.html">Home</a>
-            <a href="products.html">Produts</a>
+            <a href="products.html">Products</a>
             <a href="about.html">About us</a>
             <a href="contact.html">Contact us</a>
             <a href="contact.html">Awards</a>
