--- a/site/index.html
+++ b/site/index.html
@@ -77,7 +77,7 @@
             <h2 id="middlesub">Our reach</h2>
             <p>We have clients from all over the country, which has a vast range of different applications</p>
             <div class="ranges">
-                <div class="w100">
+                <div>
                     <img src="img/dryer.png" alt="">
                     <h2 id="small-sub">200 +</h2>
                     <p>UNITS SOLD</p>
@@ -123,6 +123,11 @@
                 </div>
             </div>
             <a href="products.html"><button id="myBtn">More</button></a>
+        </div>
+        <div class="intro fade-in">
+            <h2 id="middlesub">let's meet</h2>
+            <p>Let's meet up and discuss about your need at our workshop</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.3325243922945!2d80.62264491460654!3d7.428405414043073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae3453ec6c9d79f%3A0xc0a1a96a6991acf0!2sSAVIRU%20TECHNOLOGIES%20AND%20SERVICES%20-%20WORKSHOP!5e0!3m2!1sen!2slk!4v1604742989533!5m2!1sen!2slk" width="600" height="450"  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
 
         
