--- a/site/products.html
+++ b/site/products.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Saviru Industrial dehydraters">
     <meta name="author" content="Saviru Technologies & Services">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles3.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
@@ -53,6 +54,9 @@
         <p>Manufacturer of the largest range of dryers and dehydrators serving the country !</p>
     </div>
 
+    <div class="content">
+        
+    </div>
 
 
 
