--- a/site/about.html
+++ b/site/about.html
@@ -99,7 +99,7 @@
                         Marketing<br>
                         M : +94773626499
                     </p>
-                    <a href="https://www.linkedin.com/in/chandima-weeratunga-a71608153/" class="fa fa-linkedin" target="_blank" id="sbtn"></a>
+                    <a href="https://www.linkedin.com/in/chandima-weeratunga-a71608153/" class="fa fa-linkedin" target="_blank" id="sbtn" rel="noopener noreferrer"></a>
                 </div>
             </div>
         </div>
