--- a/site/contact.html
+++ b/site/contact.html
@@ -125,6 +125,18 @@
                             <option value="electric">Electric</option>
                         </select>
                     </div>
+                    <div class="w50">
+                        <label for="product" id="small-sub">Product :</label><br>
+                        <input type="text" name="product" required>
+                    </div>
+                    <div class="w50">
+                        <label for="capacity" id="small-sub">Your required capacity :</label><br>
+                        <select name="capacity" id="capacity">
+                            <option value="small">10kg - 100kg</option>
+                            <option value="medium">100kg - 1,000kg</option>
+                            <option value="high">1,000kg - 8,000kg</option>
+                        </select>
+                    </div>
                     <div class="w100">
                         <label for="message" id="small-sub">Message :</label><br>
                         <textarea name="message" id="message" cols="30" rows="10">
