--- a/site/index.html
+++ b/site/index.html
@@ -97,6 +97,11 @@
                     <h2 id="small-sub">70 +</h2>
                     <p>FISH PRODUCERS</p>
                 </div>
+                <div>
+                    <img src="img/gov.png" alt="">
+                    <h2 id="small-sub">10 +</h2>
+                    <p>GOVERNMENT PROJECTS</p>
+                </div>
             </div>
 
         </div>
