--- a/site/contact.html
+++ b/site/contact.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Saviru Technologies & Services">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="loader.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
@@ -17,6 +18,18 @@
       rel="stylesheet">
 </head>
 <body>
+    <div class="loadcontainer">
+        <div class="loader">
+          <div class="obj"></div>
+          <div class="obj"></div>
+          <div class="obj"></div>
+          <div class="obj"></div>
+          <div class="obj"></div>
+          <div class="obj"></div>
+          <div class="obj"></div>
+          <div class="obj"></div>
+        </div>
+      </div>
     <!--Navbar start-->
     <nav class="navbar">
         <div id="logo">
